--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,25 @@
 page-home {
+.home {
+   
+    ion-grid {
+        padding: 0%;
+        height: 100%;
+    }
+    ion-row {
+        flex: 1;
+    }
+    
+    ion-card {
+        height: 100%;
+        width: 100%;
+        margin: 0%;
+    }
+    h1,p {
+        text-align: center;
+        position:relative;
+        top:50%; 
+        transform: translateY(-50%);
+    }
 
+}
 }
